<resources>
    <string name="app_name">Demo</string>
    <string name="email">Télefono</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_employee">Bienvenido</string>
    <string name="title_activity_admin">Bienvenido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Inicio</string>
    <string name="login_error">Cedula o contraseña incorrectas, intentelo nuevamente</string>
    <string name="exit">Salir</string>
    <string name="active">Has sido desactivado temporalmente hasta no efectuar el pago, para mas informacion pongase en
        contacto con nosotros 3005557763
    </string>
    <string name="employee">Empleados</string>
    <string name="clients">Clientes</string>
    <string name="name">Nombre</string>
    <string name="registro">Registrar</string>
    <string name="registersuccess">Registro exitoso su empleado ya puede iniciar con un numero de telefono y
        contraseña.
    </string>
    <string name="registerexis">Este numero de telefono ya a sido registrado, intente con otro.</string>
    <string name="capital">Capital</string>
    <string name="title_add_employee_num">Empleados de</string>
    <string name="delete_employee">Empleado eliminado exitosamente!!</string>
    <string name="max_users">Has llegado al maximo de empleados, si necesitas mas empleados agranda tu plan.</string>
    <string name="delete">Eliminar</string>
    <string name="delete_message">Deseas eliminar este empleado?</string>
    <string name="cancel">Cancelar</string>
    <string name="cash">Dinero</string>
    <string name="add_employee">Agregar Empleado</string>
    <string name="add">Agregar</string>
    <string name="add_cash">Agregar Valor</string>
    <string name="remove">Retirar</string>
    <string name="actually">Actual</string>
    <string name="add_incorrect">El monto a agregar supera tu capital actual, intenta con una cifra mas baja.</string>
    <string name="remove_incorrect">El monto a retirar supera el capital que tiene el empleado, intenta con un monto mas
        bajo.
    </string>
    <string name="trans_success">El movimiento a sido exitoso.</string>
    <string name="load_cap">Capital: cargando...</string>
    <string name="load_actually">Actual: cargando...</string>
    <string name="load">Cargando...</string>
    <string name="trans">Movimientos</string>
    <string name="remove_descrip">Retiro de capital al empleado.</string>
    <string name="add_descrip">Ingreso de capital al empleado.</string>
    <string name="routes">Rutas</string>
    <string name="loands">Cardboards</string>
    <string name="search">Buscar...</string>
    <string name="points">Puntos</string>
    <string name="add_client">Agregar Cliente</string>
    <string name="nit">Cedula</string>
    <string name="address">Direccion</string>
    <string name="registerexisclient">Cliente registrado exitosamente!!</string>
    <string name="registererrorclient">La cedula ingresada ya esta registrada en el sistema, intenta con otra.</string>
    <string name="delete_client">Cliente eliminado exitosamente</string>
    <string name="delete_message_client">Desea eliminar a este cliente, se borrara permanentemente del sistema.</string>
    <string name="registeeditclient">Cliente editado correctamente!</string>
    <string name="edit">Editar</string>
    <string name="products">Productos</string>
    <string name="option">Opciones</string>
    <string name="history">History</string>
    <string name="edit_client">Editar Cliente</string>
    <string name="title_add_client_num">Clientes de</string>
    <string name="clients_max">Tienes el maximo de clientes para tu plan, puesdes agrandarlo contactandote con nosotros
        3005557763.
    </string>
    <string name="gain">Ganancia</string>
    <string name="total_route">Total Ruta</string>
    <string name="num_clients"># Cardboards</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="user_no_exsist">Este usuario no existe</string>
    <string name="resumen">Resumen</string>
    <string name="total">Total</string>
    <string name="num_route"># Rutas</string>
    <string name="add_route">Agregar Ruta</string>
    <string name="name_route">Nombre de ruta</string>
    <string name="save">Guardar</string>
    <string name="descrip">Agregar descripcion</string>
    <string name="no_result">No hay resultados</string>
    <string name="register_success_route">Ruta registrada exitosamente!!</string>
    <string name="price_buy">Sale a</string>
    <string name="price_sell">Valor</string>
    <string name="gain_one">Ganancia U</string>
    <string name="cellar">Bodega</string>
    <string name="gain_total">Ganancia T</string>
    <string name="utility_u">Utilidad T</string>
    <string name="total_sell">Total V</string>
    <string name="num_products"># Productos</string>
    <string name="num_cellar">Bodega</string>
    <string name="investment">Investment</string>
    <string name="utility_t">Estimado ventas</string>
    <string name="add_product">Agregar producto</string>
    <string name="description">Descripcion</string>
    <string name="register_success_product">Producto registrado exitosamente</string>
    <string name="title_add_product_num">Productos de</string>
    <string name="product_max">Has alcanzado el maximo de productos con tu plan, puedes agrandarlo contactandote con
        nosotros 3005557763.
    </string>
    <string name="routes_max">Has alcanzado el maximo de rutas con tu plan, puedes agrandarlo contactandote con
        nosotros
    </string>
    <string name="title_add_route_num">Rutas de</string>
    <string name="employee_max">Has alcanzado el maximo de empleados con tu plan, puedes agrandarlo contactandote con
        nosotros 3005557763.
    </string>
    <string name="route">Ruta</string>
    <string name="phone">Telefono</string>
    <string name="date_loand">Fecha prestamo</string>
    <string name="date_finish">Fecha final</string>
    <string name="date_next">Proximo pago</string>
    <string name="client">Cliente</string>
    <string name="add_loand">Agregar prestamo</string>
    <string name="select_client">Seleccionar cliente</string>
    <string name="percentage">Porcentaje</string>
    <string name="every_days">Cada x dias</string>
    <string name="every_days_example">ejm: 1, 5, 30, 60</string>
    <string name="observation">Observacion</string>
    <string name="note">Nota</string>
    <string name="dues">Cuotas</string>
    <string name="num_days"># Cuotas</string>
    <string name="num_dues"># Cuotas</string>
    <string name="every_date">"Todos los "</string>
    <string name="select_option">Selecciona una opcion</string>
    <string name="day">Dia</string>
    <string name="date">Fecha</string>
    <string name="due">Cuota</string>
    <string name="every_date_example">ejm: 15,30</string>
    <string name="error_days">Verifica las fechas, no pueden ser mayor a 30</string>
    <string name="select_route">Seleccionar ruta</string>
    <string name="loand_succesful">Prestamo exito!!</string>
    <string name="num_loands"># Cardboards</string>
    <string name="num_dues_paidout"># Cuotas pagas</string>
    <string name="utility_loands">Estimado total</string>
    <string name="call">Llamar</string>
    <string name="type_loand">Tipo pago</string>
    <string name="dues_p">Cuotas pendientes</string>
    <string name="num_dues_slopes"># Cuotas pendientes</string>
    <string name="slopes">Pendientes</string>
    <string name="slopes_today">Pendientes hoy</string>
    <string name="dues_pass">Cuotas atrasadas</string>
    <string name="dues_price">Valor cuota</string>
    <string name="menu_employees">Employees</string>
    <string name="not_results">Not Result</string>
    <string name="loading">Loading...</string>
    <string name="menu_stock">Stock</string>
    <string name="cellar_initial">Cellar Initial</string>
    <string name="sold">Sold</string>
    <string name="total_sold">Total Sold</string>
    <string name="wait">Wail</string>
    <string name="deleting">Deleting...</string>
    <string name="delete_product_message">Are you sure you want to delete this article ?, it will be deleted from your
        stock.
    </string>
    <string name="edit_product">Edit Product</string>
    <string name="scan_code">Scan Code</string>
    <string name="stock_error">The number of units can not be negative</string>
    <string name="add_cellar">Add Cellar</string>
    <string name="available">Available</string>
    <string name="add_quantity_product">How many items do you want to add to the warehouse? will be added what is
        available with what will be entered
    </string>
    <string name="register_code_exist">This code has already been registered, try another one.</string>
    <string name="by">By</string>
    <string name="ticket">Ticket</string>
    <string name="discount">Discount</string>
    <string name="quantity_product">Qua</string>
    <string name="unit">V.U</string>
    <string name="pay">Pay</string>
    <string name="quantity">Quantity</string>
    <string name="descrip_quantity_product">Select the amount you will take of this product</string>
    <string name="ok">OK</string>
    <string name="product_no_exist">This product isn´t exist</string>
    <string name="invalid_percentage">the discount exceeds what is allowed</string>
    <string name="register_success_bill">successful sale</string>
    <string name="search_product">Search Product</string>
    <string name="search_product_info">Search for a product by its name or its code</string>
    <string name="not_available">There are no units available for this article</string>
    <string name="only_available">Available units of this product</string>
    <string name="payment_method">Payment Method</string>
    <string name="another_type_payment">Another type payment</string>
    <string name="turned">Turned</string>
    <string name="info_other_method">This payment will not be reflected to the cash box</string>
    <string name="total_to_pay">Total to Pay</string>
    <string name="finish">Finish</string>
    <string name="bank">Bank</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="tickets">Tickets</string>
    <string name="menu_sales">Sales</string>
    <string name="add_egress">Add Egress</string>
    <string name="descrip_egress">Description Egress</string>
    <string name="total_to_egress">Total of egress</string>
    <string name="descrip_entry">Description Entry</string>
    <string name="total_to_entry">Total of entry</string>
    <string name="add_egress_">Add Expense</string>
    <string name="descrip_egress_">Description Egress</string>
    <string name="egress_successfull">Egress Successfull</string>
    <string name="egress_low">the amount to withdraw exceeds what is in the box</string>
    <string name="add_entry">Add Entry</string>
    <string name="egress_cash">Egress Cash</string>
    <string name="select_photo">Select Photo</string>
    <string name="charges">Charges</string>
    <string name="name_employee">Name Employee</string>
    <string name="menu_settings">Settings</string>
    <string name="total_egress">Total Egress</string>
    <string name="catalogue">Catalogue</string>
    <string name="history_charges">History Charges</string>
    <string name="history_loands">History Cardboards</string>
    <string name="your_paies">Your Paies</string>
</resources>