<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

        <item
                android:id="@+id/nav_catalogue"
                android:icon="@drawable/ic_shopping_cart_black_32dp"
                android:title="@string/catalogue"/>
    <item
            android:id="@+id/nav_trans"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/your_paies"/>
    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_32dp"
                    android:title="@string/menu_settings"/>
            <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/exit"/>
        </menu>
    </item>

</menu>
