<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_10">
            <TextView
                    style="@style/TextViewToolbar"
                    android:text="@string/add_employee"
                    android:background="@color/colorPrimary"
            />
            <EditText
                    android:id="@+id/user_add_name"
                      style="@style/EditTextLogin"
                      android:hint="@string/name_employee"
                      android:drawableLeft="@drawable/ic_person_black_24dp"
            android:layout_marginTop="10dp"/>
    <EditText
            android:id="@+id/user_add_nit"
            style="@style/EditTextLogin"
            android:hint="@string/nit"
            android:drawableLeft="@drawable/ic_card_membership_blue_32dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
    />
    <EditText
            android:id="@+id/user_add_pass"
              style="@style/EditTextLogin"
              android:hint="@string/password"
            android:inputType="textPassword"
              android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
              android:layout_marginTop="10dp"/>
    <Button
            android:id="@+id/Btn_registro"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/registro"
            android:background="@drawable/btn_login"
            android:textColor="#fff"
            android:textSize="24dp"
            android:fontFamily="sans-serif-condensed"
            android:enabled="false"
            android:layout_gravity="bottom"/>
</LinearLayout>