<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_10">
            <TextView
                    android:id="@+id/title"
                    style="@style/TextViewToolbar"
                    android:background="@color/colorPrimary"
                    android:text="@string/add_client"
            />
            <EditText
                    android:id="@+id/user_add_name"
                    style="@style/EditTextLogin"
                    android:hint="@string/name"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"/>
            <EditText
                    android:id="@+id/user_add_nit"
                    style="@style/EditTextLogin"
                    android:hint="@string/nit"
                    android:drawableLeft="@drawable/ic_call_to_action_black_24dp"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
            />
            <EditText
                    android:id="@+id/user_add_tel"
                    style="@style/EditTextLogin"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
            />
            <EditText
                    android:id="@+id/user_add_address"
                    style="@style/EditTextLogin"
                    android:lines="2"
                    android:hint="@string/address"
                    android:drawableLeft="@drawable/ic_room_black_24dp"
                    android:layout_marginTop="10dp"/>
            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_photo"
                    style="@style/TextViewCardThree"
                    android:textColor="@color/white"
                    android:visibility="gone"/>
            <RelativeLayout
                    android:id="@+id/content_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:id="@+id/product_add_photo"
                        android:hint="@string/cellar"
                        android:layout_marginTop="10dp"
                        android:background="@color/black"
                        android:src="@drawable/avatar"/>
                <ImageView
                        android:id="@+id/product_add_rotate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@drawable/ic_close_white_32dp"
                        android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <Button
                    android:id="@+id/Btn_registro"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/registro"
                    android:background="@drawable/btn_login"
                    android:textColor="#fff"
                    android:textSize="24dp"
                    android:fontFamily="sans-serif-condensed"
                    android:enabled="false"
                    android:layout_gravity="bottom"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

