<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#00000000">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_10">
        <TextView
                android:id="@+id/title"
                android:background="@color/colorPrimary"
                style="@style/TextViewToolbar"
                android:text="@string/add_route"
        />
        <EditText
                android:id="@+id/route_add_name"
                style="@style/EditTextLogin"
                android:hint="@string/name_route"
                android:drawableLeft="@drawable/ic_edit_black_24dp"
                android:layout_marginTop="10dp"
        android:inputType="text"/>

        <EditText
                android:id="@+id/route_add_description"
                style="@style/EditTextLogin"
                android:lines="2"
                android:hint="@string/descrip"
                android:drawableLeft="@drawable/ic_description_black_24dp"
                android:layout_marginTop="10dp"/>
        <Button
                android:id="@+id/Btn_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:text="@string/save"
                android:background="@drawable/btn_login"
                android:textColor="#fff"
                android:textSize="24dp"
                android:fontFamily="sans-serif-condensed"
                android:enabled="false"
                android:layout_gravity="bottom"/>
    </LinearLayout>
</ScrollView>