<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue"
            android:orientation="vertical">
        <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">
            <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextViewTitle"
                    android:text="@string/edit_product"
                    android:gravity="center"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_margin="10dp"
        >

            <EditText
                    android:id="@+id/product_add_name"
                    style="@style/EditTextLogin"
                    android:hint="@string/name"
                    android:drawableLeft="@drawable/ic_edit_black_24dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"/>
            <EditText
                    android:id="@+id/product_add_description"
                    style="@style/EditTextLogin"
                    android:hint="@string/description"
                    android:drawableLeft="@drawable/ic_edit_black_24dp"
                    android:layout_marginTop="10dp"
            android:lines="2"/>
            <EditText
                    android:id="@+id/product_scanner"
                    style="@style/EditTextLogin"
                    android:lines="2"
                    android:hint="@string/scan_code"
                    android:drawableLeft="@drawable/ic_scanner_blue_32dp"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
            android:enabled="false"/>
            <EditText
                    android:id="@+id/product_add_price_buy"
                    style="@style/EditTextLogin"
                    android:hint="@string/price_buy"
                    android:drawableLeft="@drawable/ic_monetization_on_black_24dp"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
            />
            <EditText
                    android:id="@+id/product_add_price_sell"
                    style="@style/EditTextLogin"
                    android:hint="@string/price_sell"
                    android:drawableLeft="@drawable/ic_monetization_on_black_24dp"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
            />
            <Button
                    android:id="@+id/Btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/edit"
                    android:background="@drawable/btn_login"
                    android:textColor="#fff"
                    android:textSize="24dp"
                    android:fontFamily="sans-serif-condensed"
                    android:enabled="false"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:drawableRight="@drawable/ic_save_blue_32dp"
                    android:paddingRight="10dp"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
