<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".client.ClientActivity"
        android:background="@color/white" >
    <androidx.appcompat.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStartWithNavigation="0dp"
            app:title=""
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:layout_marginTop="4dp"
                />
        <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewTitle"
                android:text="@string/clients"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:background="@color/transparente"/>
        <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:textColor="#fff"
                android:textSize="22dp"
                android:textColorHint="#9bffffff"
                android:gravity="center"
                android:lines="1"
                android:background="@color/transparente"/>

    </androidx.appcompat.widget.Toolbar>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top"
            tools:listitem="@layout/recycler_view_clients"
    >

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
            android:id="@+id/info_result"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
    style="@style/TextViewTitle"
    android:layout_centerVertical="true"
    android:text="@string/no_result"
    android:visibility="gone"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_add_black_24dp"
            app:fabSize="mini"/>
</RelativeLayout>